# mdviewplus

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: mermaid-render-test.md
packaging/: mdviewplus.desktop
packaging/appimage/: build-appimage.sh
packaging/deb/: build-deb.sh
packaging/pyinstaller/: make_ico.py  mdviewplus_entry.py
src/mdviewplus/: __init__.py  assets.py  cli.py  log.py  page.py  viewer.py
tests/: test_assets.py  test_page.py
